<resources>
    <string name="app_name">VillaZone</string>
    <string name="textVillaZone">VillaZone Kost</string>
    <string name="textBandung">Bandung, Indonesia</string>
    <string name="textBabakan">Babakan Ciamis, Bandung</string>
    <string name="textKost">Kost</string>
    <string name="textLuasTanah">180 m2 Luas Tanah</string>
    <string name="IconLuasTanah">IconLuasTanah</string>
    <string name="textKamarMandi">Kamar Mandi</string>
    <string name="textKamar">60 Kamar Tidur</string>


    <string name="fragmentTagihan">Hello, jangan lupa bayar kost</string>
    <string name="IconParkiran">IconParkiran</string>
    <string name="textParkiran">Parkiran Motor</string>
    <string name="Iconkamar">IconKamar</string>
    <string name="textBangunan">225 m2 Luas Bangunan</string>
    <string name="IconBangunan">IconBangunan</string>
    <string name="IconKamarMandi">IconKamarMandi</string>

    <string name="textProfile">Profile</string>
    <string name="textGroup">Group</string>
    <string name="textTagihan">Detail Estimasi Pembayaran</string>
    <string name="text_awal">Pembayaran Awal Masuk Kost</string>
    <string name="namatv">Asep Gumilang</string>
    <string name="home">Home</string>
    <string name="daftarpenghuni">Penghuni</string>
    <string name="tagihan">Tagihan</string>
    <string name="profile">Profile</string>
    <string name="belum_ada_data">Belum Ada Penghuni.</string>
    <string name="tambah">Tambah</string>
    <string name="nama_penghuni">Nama Penghuni</string>
    <string name="biaya_kamar">Biaya Kamar</string>
    <string name="string_nomor_kamar">Masukkan Nomor Kamar</string>
    <string name="kontak_penghuni">Masukkan Kontak Penghuni</string>
    <string name="kontak_penghuni2">Kontak Penghuni</string>
    <string name="simpan">Simpan</string>
    <string name="reset">Reset</string>
    <string name="image">image</string>
    <string name="nomor_kamar">Nomor Kamar</string>
    <string name="tanggal_masuk">Masukkan Tanggal Masuk</string>
    <string name="tanggal_masuk2">Tanggal Masuk</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
    <string name="edit" />
    <string name="lunas">Lunas</string>
    <string name="belum_ada_tagihan">Belum Ada Tagihan.</string>
    <string name="belum_lunas">Belum Lunas</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="register">Register</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sudah_punya_akun">Sudah punya akun?</string>
    <string name="masuk_disini">Masuk disini</string>

</resources>