<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="7dp">

<androidx.cardview.widget.CardView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="8dp"
    app:cardCornerRadius="8dp"
    app:cardElevation="2dp"
    app:cardBackgroundColor="@color/card"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp">

        <!--text view for displaying our note text-->
        <TextView
            android:id="@+id/tvNamaPenghuniT"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="3dp"
            android:layout_marginTop="3dp"
            android:layout_marginEnd="3dp"
            android:layout_marginBottom="3dp"
            android:layout_toLeftOf="@id/tvStatusPembayaran"
            android:fontFamily="@font/k2d"
            android:padding="4dp"
            android:text="@string/nama_penghuni"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold" />

        <!--text view for displaying our last updated text-->
        <TextView
            android:id="@+id/tvBiayaKamarT"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvNamaPenghuniT"
            android:layout_marginStart="3dp"
            android:layout_marginTop="2dp"
            android:layout_marginEnd="3dp"
            android:layout_marginBottom="3dp"
            android:layout_toLeftOf="@id/tvStatusPembayaran"
            android:fontFamily="@font/k2d"
            android:padding="4dp"
            android:text="@string/biaya_kamar"
            android:textColor="@color/black"
            android:textSize="13sp" />

        <!--imageview for displaying delete icon-->
        <TextView
            android:id="@+id/tvStatusPembayaran"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="3dp"
            android:layout_marginTop="3dp"
            android:layout_marginEnd="3dp"
            android:layout_marginBottom="3dp"
            android:fontFamily="@font/k2d"
            android:padding="3dp"
            android:text="@string/belum_lunas"
            android:textColor="@color/red_delete"
            android:textSize="18sp"
            android:textStyle="bold"
            app:tint="@color/white" />

    </RelativeLayout>


</androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>